Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-84265

Memory leak on IDWriteFontFace interface

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.12.9, 5.15.1
    • 5.12.6, 5.15.0 RC2
    • QPA: Windows
    • None
    • Windows
    • Windows
    • 26100ccb83ec9c4a2ee192170f1952956dd569d1 (qt/qtbase/dev) 253d3a34fcbab24fd091d03bbc76e92e71290335 (qt/qtbase/5.15) 232bd0a05f517c55cfe15d509697b15b90dcfe6e (qt/qtbase/5.12)

    Description

      QWindowsFontDatabase::createEngine called QueryInterface but never Release on the queried interface. The CreateFontFaceFromHdc cause another release when use direct write engine.

       

      When system contains about 3000 fonts, and called QFontInfo.family on each font, it will crashes the program due to not enough memory resources caused by the interface memory leak.

       

      The attachment fixed the problem.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            timxx Weitian Leung
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes