Direct Write Font Engine: Fix leaking IDWriteFontFace instances

Patch as contributed on bug report.

Fixes: QTBUG-84265
Change-Id: I73d73cf7d1b46944767750bf0f0c727c7b00b1d7
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
(cherry picked from commit 26100ccb83ec9c4a2ee192170f1952956dd569d1)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>